disable and enable button

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="icon" href="logo.png" type="png/x-icon">
+    <title>Quizzapp</title>
+    <link rel="icon" href="img/logo.png" type="png/x-icon">
     <link rel="stylesheet" href="/style.css">
     <script src="script.js"></script>
     <!-- Bootstrap file -->
@@ -50,7 +50,7 @@
                 </div>
                 <div class="question-footer">
                     <div><b>1 </b>von <b id="counter">5 </b> Fragen</div>
-                    <button type="button" class="btn btn-dark">Nächste Frage</button>
+                    <button id="button" type="button" class="btn btn-dark" disabled>Nächste Frage</button>
                 </div>
             </div>
         </div>
