show number current question

--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
                         Antwort </div>
                 </div>
                 <div class="question-footer">
-                    <div><b>1 </b>von <b id="counter">5 </b> Fragen</div>
-                    <button id="button" type="button" class="btn btn-dark" disabled>Nächste Frage</button>
+                    <div><b id="currentQuestion">1 </b>von <b id="counter">5 </b> Fragen</div>
+                    <button onclick="nextQuestion()" id="button" type="button" class="btn btn-dark" disabled>Nächste Frage</button>
                 </div>
             </div>
         </div>
